force-app/main/default/objects/Account/fields/area__c.field-meta.xml
<CustomField>
    <fullName>area__c</fullName>
    <label>場所</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>