force-app/main/default/objects/Account/fields/date1__c.field-meta.xml
<CustomField>
    <fullName>date1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>日付</label>
    <type>Date</type>
</CustomField>