force-app/main/default/objects/Account/fields/interger__c.field-meta.xml
<CustomField>
    <fullName>interger__c</fullName>
    <label>数値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>