force-app/main/default/objects/Account/fields/MailAddress__c.field-meta.xml
<CustomField>
    <fullName>MailAddress__c</fullName>
    <label>メールアドレス</label>
    <type>Email</type>
</CustomField>