force-app/main/default/objects/Account/fields/money__c.field-meta.xml
<CustomField>
    <fullName>money__c</fullName>
    <label>通貨</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>