force-app/main/default/objects/Account/fields/picklist2__c.field-meta.xml
<CustomField>
    <fullName>picklist2__c</fullName>
    <label>複数選択肢</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>