force-app/main/default/objects/Account/fields/TAC_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>TAC_Affiliation__c</fullName>
    <label>所属組織</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>法人協会</fullName>
            </value>
            <value>
                <fullName>青年部</fullName>
            </value>
            <value>
                <fullName>４Hクラブ</fullName>
            </value>
            <value>
                <fullName>指導農業士会</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>