force-app/main/default/objects/Account/fields/TAC_AgriculturalCooperativeName__c.field-meta.xml
<CustomField>
    <fullName>TAC_AgriculturalCooperativeName__c</fullName>
    <description>レコード作成者の会社名</description>
    <formula>Owner.CompanyName</formula>
    <label>農協名</label>
    <type>Text</type>
</CustomField>