force-app/main/default/objects/Account/fields/TAC_BearerRelationship__c.field-meta.xml
<CustomField>
    <fullName>TAC_BearerRelationship__c</fullName>
    <label>関係性（担い手）</label>
    <type>TextArea</type>
</CustomField>