force-app/main/default/objects/Account/fields/TAC_BelongingBranchCenter__c.field-meta.xml
<CustomField>
    <fullName>TAC_BelongingBranchCenter__c</fullName>
    <label>所属支所・センター</label>
    <length>255</length>
    <type>Text</type>
</CustomField>