force-app/main/default/objects/Account/fields/TAC_Birthday__c.field-meta.xml
<CustomField>
    <fullName>TAC_Birthday__c</fullName>
    <label>生年月日</label>
    <type>Date</type>
</CustomField>