force-app/main/default/objects/Account/fields/TAC_BranchCode__c.field-meta.xml
<CustomField>
    <fullName>TAC_BranchCode__c</fullName>
    <label>支所コード</label>
    <length>40</length>
    <type>Text</type>
</CustomField>