force-app/main/default/objects/Account/fields/TAC_CompetitionForMaterials1__c.field-meta.xml
<CustomField>
    <fullName>TAC_CompetitionForMaterials1__c</fullName>
    <label>競合内容1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>