force-app/main/default/objects/Account/fields/TAC_CompetitionForMaterials2__c.field-meta.xml
<CustomField>
    <fullName>TAC_CompetitionForMaterials2__c</fullName>
    <label>競合内容2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>