force-app/main/default/objects/Account/fields/TAC_CompetitionForMaterials3__c.field-meta.xml
<CustomField>
    <fullName>TAC_CompetitionForMaterials3__c</fullName>
    <label>競合内容3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>