force-app/main/default/objects/Account/fields/TAC_ContinueOrEnd__c.field-meta.xml
<CustomField>
    <fullName>TAC_ContinueOrEnd__c</fullName>
    <defaultValue>&quot;継続中&quot;</defaultValue>
    <label>継続／終了</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>継続中</fullName>
            </value>
            <value>
                <fullName>終了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>