force-app/main/default/objects/Account/fields/TAC_DeleteFlag__c.field-meta.xml
<CustomField>
    <fullName>TAC_DeleteFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>削除フラグ</label>
    <type>Checkbox</type>
</CustomField>