force-app/main/default/objects/Account/fields/TAC_DepartmentInCharge__c.field-meta.xml
<CustomField>
    <fullName>TAC_DepartmentInCharge__c</fullName>
    <description>部会で使用</description>
    <label>担当部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>