force-app/main/default/objects/Account/fields/TAC_District__c.field-meta.xml
<CustomField>
    <fullName>TAC_District__c</fullName>
    <label>地区</label>
    <length>255</length>
    <type>Text</type>
</CustomField>