force-app/main/default/objects/Account/fields/TAC_ExternalSystemNinaiteID__c.field-meta.xml
<CustomField>
    <fullName>TAC_ExternalSystemNinaiteID__c</fullName>
    <description>外部システムの担い手ID</description>
    <externalId>true</externalId>
    <label>外部システム担い手ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>