force-app/main/default/objects/Account/fields/TAC_familyName1__c.field-meta.xml
<CustomField>
    <fullName>TAC_familyName1__c</fullName>
    <description>個人・組織レイアウトで使用</description>
    <label>氏名1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>