force-app/main/default/objects/Account/fields/TAC_familyName2__c.field-meta.xml
<CustomField>
    <fullName>TAC_familyName2__c</fullName>
    <description>個人・組織レイアウトで使用</description>
    <label>氏名2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>