force-app/main/default/objects/Account/fields/TAC_FarmerDivision__c.field-meta.xml
<CustomField>
    <fullName>TAC_FarmerDivision__c</fullName>
    <label>経営形態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>農業法人</fullName>
            </value>
            <value>
                <fullName>農事組合</fullName>
            </value>
            <value>
                <fullName>集落営農組織</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>