force-app/main/default/objects/Account/fields/TAC_FinancingStatus__c.field-meta.xml
<CustomField>
    <fullName>TAC_FinancingStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>融資状況</label>
    <type>Checkbox</type>
</CustomField>