force-app/main/default/objects/Account/fields/TAC_Greenhouse__c.field-meta.xml
<CustomField>
    <fullName>TAC_Greenhouse__c</fullName>
    <label>管理状況</label>
    <length>255</length>
    <type>Text</type>
</CustomField>