force-app/main/default/objects/Account/fields/TAC_GrowthPotential__c.field-meta.xml
<CustomField>
    <fullName>TAC_GrowthPotential__c</fullName>
    <label>成長性</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>経営拡大</fullName>
            </value>
            <value>
                <fullName>新規就農</fullName>
            </value>
            <value>
                <fullName>安定</fullName>
            </value>
            <value>
                <fullName>経営縮小</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>