force-app/main/default/objects/Account/fields/TAC_Heir__c.field-meta.xml
<CustomField>
    <fullName>TAC_Heir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>後継者の有無</label>
    <type>Checkbox</type>
</CustomField>