force-app/main/default/objects/Account/fields/TAC_HPAddress__c.field-meta.xml
<CustomField>
    <fullName>TAC_HPAddress__c</fullName>
    <label>ＨＰアドレス</label>
    <type>Url</type>
</CustomField>