force-app/main/default/objects/Account/fields/TAC_IkoOfficerId__c.field-meta.xml
<CustomField>
    <fullName>TAC_IkoOfficerId__c</fullName>
    <label>主担当者外部ID(移行用)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>