force-app/main/default/objects/Account/fields/TAC_IkoOfficerName__c.field-meta.xml
<CustomField>
    <fullName>TAC_IkoOfficerName__c</fullName>
    <label>主担当者(移行用)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>