force-app/main/default/objects/Account/fields/TAC_IkoOwnerId__c.field-meta.xml
<CustomField>
    <fullName>TAC_IkoOwnerId__c</fullName>
    <label>所有者外部ID(移行用)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>