force-app/main/default/objects/Account/fields/TAC_IkoOwnerName__c.field-meta.xml
<CustomField>
    <fullName>TAC_IkoOwnerName__c</fullName>
    <label>所有者(移行用)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>