force-app/main/default/objects/Account/fields/TAC_Influence__c.field-meta.xml
<CustomField>
    <fullName>TAC_Influence__c</fullName>
    <label>影響力</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>大</fullName>
            </value>
            <value>
                <fullName>中</fullName>
            </value>
            <value>
                <fullName>小</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>