force-app/main/default/objects/Account/fields/TAC_LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>TAC_LastActivityDate__c</fullName>
    <formula>LastActivityDate</formula>
    <label>最終活動日</label>
    <type>Date</type>
</CustomField>