force-app/main/default/objects/Account/fields/TAC_ManagementIndex__c.field-meta.xml
<CustomField>
    <fullName>TAC_ManagementIndex__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>経営指標</label>
    <referenceTo>TAC_ManagementIndex__c</referenceTo>
    <relationshipLabel>担い手情報</relationshipLabel>
    <relationshipName>TAC_ManagementIndexs</relationshipName>
    <type>Lookup</type>
</CustomField>