force-app/main/default/objects/Account/fields/TAC_Manager__c.field-meta.xml
<CustomField>
    <fullName>TAC_Manager__c</fullName>
    <description>部会レイアウトで使用</description>
    <label>担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>