force-app/main/default/objects/Account/fields/TAC_MaterialCommittee__c.field-meta.xml
<CustomField>
    <fullName>TAC_MaterialCommittee__c</fullName>
    <label>資格・属性</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>認定農業者</fullName>
            </value>
            <value>
                <fullName>エコファーマー</fullName>
            </value>
            <value>
                <fullName>GAP認証</fullName>
            </value>
            <value>
                <fullName>有機JAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>