force-app/main/default/objects/Account/fields/TAC_MemoField__c.field-meta.xml
<CustomField>
    <fullName>TAC_MemoField__c</fullName>
    <label>メモ欄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>