force-app/main/default/objects/Account/fields/TAC_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>TAC_MobilePhone__c</fullName>
    <inlineHelpText>記入例：09012345678</inlineHelpText>
    <label>携帯電話</label>
    <type>Phone</type>
</CustomField>