force-app/main/default/objects/Account/fields/TAC_Officer__c.field-meta.xml
<CustomField>
    <fullName>TAC_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>主担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsOfficer</relationshipName>
    <type>Lookup</type>
</CustomField>