force-app/main/default/objects/Account/fields/TAC_OfficerChangeRequiredFlag__c.field-meta.xml
<CustomField>
    <fullName>TAC_OfficerChangeRequiredFlag__c</fullName>
    <formula>IF ( ISBLANK( TAC_IkoOfficerId__c) , false,  IF (TAC_IkoOfficerId__c&lt;&gt;   TAC_Officer__r.TAC_ExternalSystemUserId__c , true, false))</formula>
    <label>主担当者変更必要フラグ</label>
    <type>Checkbox</type>
</CustomField>