force-app/main/default/objects/Account/fields/TAC_OfficerManualChagedFlag__c.field-meta.xml
<CustomField>
    <fullName>TAC_OfficerManualChagedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>主担当者手動変更済みフラグ</label>
    <type>Checkbox</type>
</CustomField>