force-app/main/default/objects/Account/fields/TAC_OrganizationNameOthers__c.field-meta.xml
<CustomField>
    <fullName>TAC_OrganizationNameOthers__c</fullName>
    <label>所属組織名（その他）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>