force-app/main/default/objects/Account/fields/TAC_Others__c.field-meta.xml
<CustomField>
    <fullName>TAC_Others__c</fullName>
    <label>つながり（その他）</label>
    <type>TextArea</type>
</CustomField>