force-app/main/default/objects/Account/fields/TAC_OthersRelationship__c.field-meta.xml
<CustomField>
    <fullName>TAC_OthersRelationship__c</fullName>
    <label>関係性（その他関連人物）</label>
    <type>TextArea</type>
</CustomField>