force-app/main/default/objects/Account/fields/TAC_OwnerChangeRequiredFlag__c.field-meta.xml
<CustomField>
    <fullName>TAC_OwnerChangeRequiredFlag__c</fullName>
    <formula>IF ( ISBLANK( TAC_IkoOwnerId__c ) , false,  IF (TAC_IkoOwnerId__c   &lt;&gt;  Owner.TAC_ExternalSystemUserId__c, true, false))</formula>
    <label>所有者変更必要フラグ</label>
    <type>Checkbox</type>
</CustomField>