force-app/main/default/objects/Account/fields/TAC_OwnerManualChagedFlag__c.field-meta.xml
<CustomField>
    <fullName>TAC_OwnerManualChagedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE：ページ画面で手動変更</description>
    <label>所有者手動変更済みフラグ</label>
    <type>Checkbox</type>
</CustomField>