force-app/main/default/objects/Account/fields/TAC_PriorityMedia__c.field-meta.xml
<CustomField>
    <fullName>TAC_PriorityMedia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>重点</label>
    <type>Checkbox</type>
</CustomField>