force-app/main/default/objects/Account/fields/TAC_RelationBearer__c.field-meta.xml
<CustomField>
    <fullName>TAC_RelationBearer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>つながり（担い手）</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>担い手情報</relationshipLabel>
    <relationshipName>TAC_RelationBearer</relationshipName>
    <type>Lookup</type>
</CustomField>