force-app/main/default/objects/Account/fields/TAC_Relationship1__c.field-meta.xml
<CustomField>
    <fullName>TAC_Relationship1__c</fullName>
    <label>続柄1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>