force-app/main/default/objects/Account/fields/TAC_Relationship2__c.field-meta.xml
<CustomField>
    <fullName>TAC_Relationship2__c</fullName>
    <label>続柄2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>