force-app/main/default/objects/Account/fields/TAC_Relationship3__c.field-meta.xml
<CustomField>
    <fullName>TAC_Relationship3__c</fullName>
    <label>続柄3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>