force-app/main/default/objects/Account/fields/TAC_RelationUser__c.field-meta.xml
<CustomField>
    <fullName>TAC_RelationUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>つながり（職員）</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TAC_RelationUser</relationshipName>
    <type>Lookup</type>
</CustomField>