force-app/main/default/objects/Account/fields/TAC_ResponseToYourCompany__c.field-meta.xml
<CustomField>
    <fullName>TAC_ResponseToYourCompany__c</fullName>
    <label>JAに対する信頼度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>協力的</fullName>
            </value>
            <value>
                <fullName>ニュートラル</fullName>
            </value>
            <value>
                <fullName>懐疑的</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>