force-app/main/default/objects/Account/fields/TAC_SalesAndPurchasePerformance__c.field-meta.xml
<CustomField>
    <fullName>TAC_SalesAndPurchasePerformance__c</fullName>
    <description>レポートで使用する項目</description>
    <label>販売・購買実績額名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>