force-app/main/default/objects/Account/fields/TAC_SalesCompetition1__c.field-meta.xml
<CustomField>
    <fullName>TAC_SalesCompetition1__c</fullName>
    <label>競合先1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>