force-app/main/default/objects/Account/fields/TAC_SalesCompetition2__c.field-meta.xml
<CustomField>
    <fullName>TAC_SalesCompetition2__c</fullName>
    <label>競合先2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>