force-app/main/default/objects/Account/fields/TAC_SalesCompetition3__c.field-meta.xml
<CustomField>
    <fullName>TAC_SalesCompetition3__c</fullName>
    <label>競合先3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>