force-app/main/default/objects/Account/fields/TAC_SecretariatLocation__c.field-meta.xml
<CustomField>
    <fullName>TAC_SecretariatLocation__c</fullName>
    <description>部会で使用</description>
    <label>事務局所在地</label>
    <type>Address</type>
</CustomField>