force-app/main/default/objects/Account/fields/TAC_Sex__c.field-meta.xml
<CustomField>
    <fullName>TAC_Sex__c</fullName>
    <label>性別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>男性</fullName>
            </value>
            <value>
                <fullName>女性</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>