force-app/main/default/objects/Account/fields/TAC_StandardNumberOfVisits__c.field-meta.xml
<CustomField>
    <fullName>TAC_StandardNumberOfVisits__c</fullName>
    <label>訪問基準回数（年間）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>