force-app/main/default/objects/Account/fields/TAC_SubcommitteeCode__c.field-meta.xml
<CustomField>
    <fullName>TAC_SubcommitteeCode__c</fullName>
    <label>部会コード</label>
    <length>40</length>
    <type>Text</type>
</CustomField>