force-app/main/default/objects/Account/fields/TAC_SubscriptionStatus__c.field-meta.xml
<CustomField>
    <fullName>TAC_SubscriptionStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>共済加入状況</label>
    <type>Checkbox</type>
</CustomField>