force-app/main/default/objects/Account/fields/TAC_TotalPointId__c.field-meta.xml
<CustomField>
    <fullName>TAC_TotalPointId__c</fullName>
    <label>総合ポイントID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>