force-app/main/default/objects/Account/fields/TAC_UnionMemberCode1__c.field-meta.xml
<CustomField>
    <fullName>TAC_UnionMemberCode1__c</fullName>
    <label>組合員コード①</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>