force-app/main/default/objects/Account/fields/TAC_UnionMemberCode2__c.field-meta.xml
<CustomField>
    <fullName>TAC_UnionMemberCode2__c</fullName>
    <label>組合員コード②</label>
    <length>40</length>
    <type>Text</type>
</CustomField>