force-app/main/default/objects/Account/fields/TAC_UserrRelationship__c.field-meta.xml
<CustomField>
    <fullName>TAC_UserrRelationship__c</fullName>
    <label>関係性（職員）</label>
    <type>TextArea</type>
</CustomField>