force-app/main/default/objects/Account/fields/test001__c.field-meta.xml
<CustomField>
    <fullName>test001__c</fullName>
    <formula>Name &amp; &apos;数式テスト&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>数式</label>
    <type>Text</type>
</CustomField>