force-app/main/default/objects/Account/fields/times__c.field-meta.xml
<CustomField>
    <fullName>times__c</fullName>
    <label>時間</label>
    <type>Time</type>
</CustomField>