force-app/main/default/objects/Account/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>url</label>
    <type>Url</type>
</CustomField>