force-app/main/default/objects/Account/recordTypes/TAC_Bukai.recordType-meta.xml
<RecordType>
    <fullName>TAC_Bukai</fullName>
    <active>true</active>
    <label>04.部会</label>
</RecordType>