force-app/main/default/objects/Account/recordTypes/TAC_OthersRecordType.recordType-meta.xml
<RecordType>
    <fullName>TAC_OthersRecordType</fullName>
    <active>true</active>
    <label>05.会議・イベント・その他</label>
</RecordType>