force-app/main/default/objects/Account/recordTypes/TAC_SystemSuppliersAdministration.recordType-meta.xml
<RecordType>
    <fullName>TAC_SystemSuppliersAdministration</fullName>
    <active>true</active>
    <label>03.系統・取引先・行政等</label>
</RecordType>