force-app/main/default/objects/Account/validationRules/TAC_HyphenCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_HyphenCheck</fullName>
    <active>false</active>
    <errorConditionFormula>OR(CONTAINS( Phone,&quot;-&quot;) ,CONTAINS( TAC_MobilePhone__c ,&quot;-&quot;) )</errorConditionFormula>
    <errorMessage>電話・携帯番号はハイフンなしで入力してください</errorMessage>
</ValidationRule>