force-app/main/default/objects/Account/validationRules/TAC_HyphenCheckMobilePhone.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_HyphenCheckMobilePhone</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( TAC_MobilePhone__c,&quot;-&quot;)</errorConditionFormula>
    <errorDisplayField>TAC_MobilePhone__c</errorDisplayField>
    <errorMessage>携帯番号はハイフンなしで入力してください</errorMessage>
</ValidationRule>