force-app/main/default/objects/Account/validationRules/TAC_HyphenCheckPhone.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_HyphenCheckPhone</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( Phone,&quot;-&quot;)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>電話はハイフンなしで入力してください</errorMessage>
</ValidationRule>