force-app/main/default/objects/Account/validationRules/TAC_InputCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_InputCheck</fullName>
    <active>false</active>
    <description>半角数字で入力されているか確認する
対象項目：電話番号、携帯電話、支所コード、顧客コード、部会コード、組合員コード①、組合員コード②</description>
    <errorConditionFormula>OR(NOT(REGEX( Phone , &quot;^[0-9]*$&quot; )),NOT(REGEX( TAC_MobilePhone__c , &quot;^[0-9]*$&quot; )),NOT(REGEX(TAC_BranchCode__c, &quot;^[0-9]*$&quot;)),NOT(REGEX(TAC_UnionMemberCode1__c, &quot;^[0-9]*$&quot;)),NOT(REGEX( TAC_UnionMemberCode2__c , &quot;^[0-9]*$&quot; )),NOT(REGEX( TAC_SubcommitteeCode__c , &quot;^[0-9]*$&quot; )),NOT(REGEX(TAC_CustomerCode__c , &quot;^[0-9]*$&quot; )))</errorConditionFormula>
    <errorMessage>半角数字で入力してください。</errorMessage>
</ValidationRule>