force-app/main/default/objects/Account/validationRules/TAC_InputCheckBranchCode.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_InputCheckBranchCode</fullName>
    <active>true</active>
    <description>半角英数字または「_」「-」で入力されているか確認する
対象項目：支所コード</description>
    <errorConditionFormula>IF(ISBLANK(TAC_BranchCode__c),FALSE,NOT(REGEX(TAC_BranchCode__c, &quot;^[0-9a-zA-Z_-]+$&quot;)))</errorConditionFormula>
    <errorDisplayField>TAC_BranchCode__c</errorDisplayField>
    <errorMessage>半角英数字または「_」「-」で入力してください。</errorMessage>
</ValidationRule>