force-app/main/default/objects/Account/validationRules/TAC_InputCheckMobilePhone.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_InputCheckMobilePhone</fullName>
    <active>true</active>
    <description>半角数字で入力されているか確認する
対象項目：携帯電話</description>
    <errorConditionFormula>NOT(REGEX( TAC_MobilePhone__c , &quot;^[0-9]*$&quot; ))</errorConditionFormula>
    <errorDisplayField>TAC_MobilePhone__c</errorDisplayField>
    <errorMessage>半角数字で入力してください。</errorMessage>
</ValidationRule>