force-app/main/default/objects/Account/validationRules/TAC_InputCheckPhone.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_InputCheckPhone</fullName>
    <active>true</active>
    <description>半角数字で入力されているか確認する
対象項目：電話（記入例：0312345678）</description>
    <errorConditionFormula>NOT(REGEX( Phone , &quot;^[0-9]*$&quot; ))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>半角数字で入力してください。</errorMessage>
</ValidationRule>