force-app/main/default/objects/Account/validationRules/TAC_InputCheckSubcommitteeCode.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_InputCheckSubcommitteeCode</fullName>
    <active>true</active>
    <description>半角数字で入力されているか確認する
対象項目：部会コード</description>
    <errorConditionFormula>NOT(REGEX( TAC_SubcommitteeCode__c , &quot;^[0-9]*$&quot; ))</errorConditionFormula>
    <errorDisplayField>TAC_SubcommitteeCode__c</errorDisplayField>
    <errorMessage>半角数字で入力してください。</errorMessage>
</ValidationRule>