force-app/main/default/objects/Account/validationRules/TAC_InputCheckUnionMemberCode1.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_InputCheckUnionMemberCode1</fullName>
    <active>true</active>
    <description>半角数字、記号で入力されているか確認する
対象項目：組合員コード①</description>
    <errorConditionFormula>NOT(REGEX(TAC_UnionMemberCode1__c, &quot;^[ !-~]*$&quot;))</errorConditionFormula>
    <errorDisplayField>TAC_UnionMemberCode1__c</errorDisplayField>
    <errorMessage>半角数字または記号で入力してください。</errorMessage>
</ValidationRule>