force-app/main/default/objects/Account/validationRules/TAC_InputCheckUnionMemberCode2.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_InputCheckUnionMemberCode2</fullName>
    <active>true</active>
    <description>半角数字で入力されているか確認する
対象項目：組合員コード②</description>
    <errorConditionFormula>NOT(REGEX( TAC_UnionMemberCode2__c , &quot;^[0-9]*$&quot; ))</errorConditionFormula>
    <errorDisplayField>TAC_UnionMemberCode2__c</errorDisplayField>
    <errorMessage>半角数字で入力してください。</errorMessage>
</ValidationRule>