force-app/main/default/objects/Account/validationRules/TAC_ZenkakuCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_ZenkakuCheck</fullName>
    <active>false</active>
    <description>全角文字で入力されているか確認する
対象項目：名称、地区、所属支所・センター</description>
    <errorConditionFormula>OR(
IF ( ISBLANK ( LastName ), FALSE, REGEX( LastName , &quot;^[ｦ-ﾟ]*$&quot;)),
IF ( ISBLANK ( FirstName ), FALSE, REGEX( FirstName , &quot;^[ｦ-ﾟ]*$&quot;)),
IF ( ISBLANK ( Name ), FALSE, REGEX( Name , &quot;^[ｦ-ﾟ]*$&quot;)),
IF ( ISBLANK ( TAC_BelongingBranchCenter__c ), FALSE, REGEX( TAC_BelongingBranchCenter__c , &quot;^[ｦ-ﾟ]*$&quot;)),
IF ( ISBLANK ( TAC_District__c ), FALSE, REGEX( TAC_District__c , &quot;^[ｦ-ﾟ]*$&quot;))
)</errorConditionFormula>
    <errorMessage>全角文字で入力してください。</errorMessage>
</ValidationRule>