force-app/main/default/objects/Account/validationRules/TAC_ZenkakuCheckBelongingBranchCenter.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_ZenkakuCheckBelongingBranchCenter</fullName>
    <active>true</active>
    <description>全角文字で入力されているか確認する
対象項目：所属支所・センター</description>
    <errorConditionFormula>IF ( ISBLANK ( TAC_BelongingBranchCenter__c ), FALSE, REGEX( TAC_BelongingBranchCenter__c , &quot;^[ｦ-ﾟ]*$&quot;))</errorConditionFormula>
    <errorDisplayField>TAC_BelongingBranchCenter__c</errorDisplayField>
    <errorMessage>全角文字で入力してください。</errorMessage>
</ValidationRule>