force-app/main/default/objects/Account/validationRules/TAC_ZenkakuCheckDistrict.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_ZenkakuCheckDistrict</fullName>
    <active>true</active>
    <description>全角文字で入力されているか確認する
対象項目：地区</description>
    <errorConditionFormula>IF ( ISBLANK ( TAC_District__c ), FALSE, REGEX( TAC_District__c , &quot;^[ｦ-ﾟ]*$&quot;))</errorConditionFormula>
    <errorDisplayField>TAC_District__c</errorDisplayField>
    <errorMessage>全角文字で入力してください。</errorMessage>
</ValidationRule>