force-app/main/default/objects/Account/validationRules/TAC_ZenkakuCheckFirstName.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_ZenkakuCheckFirstName</fullName>
    <active>true</active>
    <description>全角文字で入力されているか確認する
対象項目：名</description>
    <errorConditionFormula>IF ( ISBLANK ( FirstName ), FALSE, NOT( REGEX( FirstName , &quot;^[^ -~｡-ﾟ]+$&quot;)))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>全角文字で入力してください。</errorMessage>
</ValidationRule>