force-app/main/default/objects/Account/validationRules/TAC_ZenkakuCheckLastName.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_ZenkakuCheckLastName</fullName>
    <active>true</active>
    <description>全角文字で入力されているか確認する
対象項目：姓</description>
    <errorConditionFormula>IF ( ISBLANK ( LastName ), FALSE, NOT( REGEX( LastName , &quot;^[^ -~｡-ﾟ]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>全角文字で入力してください。</errorMessage>
</ValidationRule>