force-app/main/default/objects/Account/validationRules/TAC_ZenkakuCheckName.validationRule-meta.xml
<ValidationRule>
    <fullName>TAC_ZenkakuCheckName</fullName>
    <active>true</active>
    <description>全角文字で入力されているか確認する
対象項目：名称</description>
    <errorConditionFormula>IF( RecordType.Name =&quot;01.個人&quot;,FALSE, IF ( ISBLANK (Name), FALSE, NOT( REGEX(  Name , &quot;^[^ -~｡-ﾟ]*$&quot;))) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>全角文字で入力してください。</errorMessage>
</ValidationRule>