force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>TAC_AgriculturalCooperativeName__c</columns>
    <columns>TAC_BelongingBranchCenter__c</columns>
    <columns>TAC_UnionMemberCode1__c</columns>
    <columns>TAC_Address__c</columns>
    <columns>TAC_Officer__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>TAC_ContinueOrEnd__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>TAC_PriorityMedia__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべての担い手情報</label>
</ListView>