force-app/main/default/objects/Account/listViews/TAC_CorporateAccount.listView-meta.xml
<ListView>
    <fullName>TAC_CorporateAccount</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>TAC_AgriculturalCooperativeName__c</columns>
    <columns>TAC_BelongingBranchCenter__c</columns>
    <columns>TAC_UnionMemberCode1__c</columns>
    <columns>TAC_Address__c</columns>
    <columns>TAC_Officer__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TAC_StandardNumberOfVisits__c</columns>
    <columns>TAC_ContinueOrEnd__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Account</value>
    </filters>
    <label>02.訪問先（組織）</label>
</ListView>