force-app/main/default/objects/Account/listViews/TAC_Others.listView-meta.xml
<ListView>
    <fullName>TAC_Others</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>TAC_AgriculturalCooperativeName__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TAC_ContinueOrEnd__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.TAC_OthersRecordType</value>
    </filters>
    <label>05.会議・イベント</label>
</ListView>